--- a/Contributors.html
+++ b/Contributors.html
@@ -31,9 +31,10 @@
       <li>
          Nishant Thottarath
        </li>
-      <li>
-         <!-- Add Your name Here -->
-      </li>
+              <li>
+         Vishal Arora
+       </li>
+
         
     </ul>
 </body>
